# The-void-is-approaching

./: CMakeLists.txt  README.md
TheVoidIsApproaching/: CMakeLists.txt  classes.cpp  classes.h  json-loader.cpp  json-loader.h  main.cpp  resource.h
TheVoidIsApproaching/Code-Files/: battle.cpp  classes.cpp  entity-class.cpp  game-class.cpp  interface.cpp  inventory-class.cpp  json-loader.cpp  main-functions.cpp
TheVoidIsApproaching/Include-Files/: battle.h  classes.h  entity-class.h  game-class.h  game-structs.h  interface.h  inventory-class.h  json-loader.h  main-functions.h
TheVoidIsApproaching/Json-Files/: entities.json  entitys.json  interactions.json  locations.json
TheVoidIsApproaching/data/: battle-actions.json  entities.json  interactions.json  items.json  locations.json
TheVoidIsApproaching/include/: battle.hpp  entity.hpp  game.hpp  interface.hpp  inventory.hpp  json-loader.hpp  json-structs.hpp  main-functions.hpp
TheVoidIsApproaching/src/: battle.cpp  entity.cpp  game.cpp  interface.cpp  inventory.cpp  json-loader.cpp  main-functions.cpp
